Set modal positions to fixed to prevent overflow

--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ button.continue.disabled {
     flex-flow: column nowrap;
     align-items: center;
     justify-content: center;
-    position: absolute;
+    position: fixed;
     min-width: 310px;
     border-radius: 10px;
     border: none;
@@ -183,7 +183,7 @@ button.continue.disabled {
 }
 
 .overlay {
-    position: absolute;
+    position: fixed;
     width: 100vw;
     height: 100vh;
     background-color: #bdb7b74d;
